DW-54 - Header issues fixed on IE.

--- a/_assets_src/sass/components/intro/_intro-tile.scss
+++ b/_assets_src/sass/components/intro/_intro-tile.scss
@@ -20,6 +20,7 @@
 .intro-tile__image-section {
   opacity: 0;
   @include transitions(opacity);
+  transition-duration: $trans_time_slow;
 
   &.intro-tile__image-section--visible {
     opacity: 1;
